   * Trac 20276: Fix toggling sounds
   * Trac 17480: Make url linkification toggleable
   * Update ctypes-otr to 00e4e80a
   * Trac 20231: Remove incomplete translations
   * Fix irc "msg is not defined" error (bugzilla 1313137)
 * Mac
   * Trac 20206: Avoid prompting to download font "Osaka" on macOS Sierra
   * Trac 20204: Windows don't drag on macOS Sierra

Tor Messenger 0.2.0b2 -- September 06, 2016
 * Mac
   * Trac 19269: Fix OS X file permissions
   * Fix OS X profile when application is not placed in /Applications

Tor Messenger 0.2.0b1 -- September 02, 2016
 * All Platforms
   * Use the THUNDERBIRD_45_3_0_RELEASE tag on mozilla-esr45
   * Use the THUNDERBIRD_45_3_0_RELEASE tag on comm-esr45
   * Trac 19053: Display plaintext in notifications
   * Trac 17363: Remove redundant Tor Messenger folders
   * Trac 14388: Secure automatic updates for Tor Messenger
   * Trac 13861: Preserve user profiles after updates
   * Update libgcrypt to 1.6.6 for CVE-2016-6316
   * Update ctypes-otr to 0.0.2
 * Linux
   * Trac 18634: Switch to building Tor Messenger on Debian Wheezy
 * Mac
   * Trac 13861: Profile directory stored in ~/Library/Application\ Support/TorMessenger-Data
   * Trac 17460: Add graphics for OS X drag and drop to Applications
   * Trac 17648: Fix update service error in error console

Tor Messenger 0.1.0b6 -- April 06, 2016
 * All Platforms
   * Use the THUNDERBIRD_45_0b3_RELEASE tag on mozilla-esr45
   * Use the THUNDERBIRD_45_0b3_RELEASE tag on comm-esr45
   * Trac 18533: Disable sending fonts or colors as part of messages
   * ctypes-otr
     * GH 68: Don't close notification bar until verification succeeds (patch by Elias Rohrer)
     * GH 71: Improve verifying from the fingerprint manager (patch by Vu Quoc Huy)
     * GH 72: Generate keys automatically after account creation (patch by Vu Quoc Huy)

Tor Messenger 0.1.0b5 -- March 09, 2016
 * All Platforms
   * Trac 13795: Remove SPI root certificate because Debian no longer ships it